temp fix for mathjax overflow

--- a/provider/scss/base/_layout.scss
+++ b/provider/scss/base/_layout.scss
@@ -37,11 +37,4 @@ a{
 .alignright{
 	float: right;
 }
-.inner{
-	width: $max-width;
-	margin: 0 auto;
-	@media screen and (max-width: 766px){
-		width: 100%;
-	}
-}
 
